[package]
name = "gh-web"
version = "0.1.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.3", features = ["full"] }
warp = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"
http-api-problem = { version = "0.17.0", features = ["with-warp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gh-lib = { git = "https://github.com/aslamplr/gh-cli", tag = "v0.4.0-beta-1" }
